# QSIGN

OQS/: .gitignore  KOREAN_COMMENTS_ADDED.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  pom.xml
OQS/examples/: SimpleExample.java
OQS/src/main/java/com/qsign/oqs/: OQSProvider.java
OQS/src/test/java/com/qsign/oqs/: DilithiumSignatureTest.java  QSIGNIntegrationTest.java
Q-SSL/: CMakeLists.txt
Q-SSL/include/qssl/: qssl.h
Q-SSL/src/client/: qssl_client.c
Q-SSL/src/crypto/: pqc_crypto.c
Q-SSL/src/protocol/: handshake.c
Q-SSL/src/server/: qssl_server.c
QSIGN-Integration-Tests/: README.md
QSIGN-Integration-Tests/01-gateway-flow/: GATEWAY-FLOW-307-FIX-REPORT.md  GATEWAY-FLOW-307-STATUS-REPORT.md  GATEWAY-FLOW-FINAL-STEPS.md  GATEWAY-FLOW-ISSUE.md  GATEWAY-FLOW-REACTIVATION-REPORT.md  GATEWAY-FLOW-SETUP.md  GATEWAY-FLOW-STATUS.md  GATEWAY-FLOW-SUCCESS.md  GATEWAY-FLOW-TEST-RESULT.md  KC_FRONTEND_URL-REMOVAL-SUCCESS.md  README.md  TROUBLESHOOTING-HTTP-REDIRECT.md  init-apisix-pqc-routes.sh  setup-apisix-pqc-routes-30080.sh  setup-gateway-proxy.sh  test-gateway-flow.sh
QSIGN-Integration-Tests/04-docs/: APP3-LOGOUT-URI-FIX.md  APP4-RS256-FIX.md  NODE-LOGGING-GUIDE.md  PQC-HYBRID-SSO-COMPLETE.md  QSIGN-FULL-ARCHITECTURE-FLOW.md
QSIGN-Integration-Tests/04-docs/01-guides/: APISIX-DASHBOARD-ROUTE-GUIDE.md  DELETE-ERROR-POD-GUIDE.md  KUBERNETES-LOGS-GUIDE.md  PQC-REALM-SETUP-COMPLETE.md  Q-APP-SYNC-GUIDE.md  Q-SIGN-FIX-GUIDE.md  README.md  REPLICASET-CLEANUP-GUIDE.md  SSO-TEST-APP-HSM-FIX-NEXT-STEPS.md
QSIGN-Integration-Tests/04-docs/02-results/: FINAL-REPORT.md  QSIGN-COMPLETE-SUCCESS.md  QSIGN-DEPLOYMENT-COMPLETE.md  QSIGN-INTEGRATION-TEST-RESULT.md  README.md  SSO-TEST-APP-HSM-VAULT-ERROR-DIAGNOSIS.md
QSIGN-Integration-Tests/04-docs/03-app-reports/: APP1-APP2-DISABLED.md  APP4-FIX-REPORT.md  APP5-CONFIG-FIX-REPORT.md  APP5-DEPLOYMENT-REPORT.md  APP5-ERROR-FIX-REPORT.md
QSIGN-Integration-Tests/04-docs/04-troubleshooting/: KEYCLOAK-DEPLOYMENT-ISSUE-ANALYSIS.md  Q-SIGN-ARGOCD-TROUBLESHOOT.md  Q-SIGN-FINAL-FIX.md  Q-SIGN-PENDING-FIX.md  Q-SIGN-RESTORE-COMPLETE.md  README.md
QSIGN-Integration-Tests/05-scripts/: README.md  collect-qsign-logs.sh  fix-app3-logout-uri.sh  fix-app4-rs256.sh
QSIGN-Integration-Tests/05-scripts/01-setup/: README.md  create-all-app-clients.sh  create-app7-client.sh  create-pqc-realm-client.sh  create-sso-client.sh  fix-keycloak-frontend-url.sh  restart-keycloak.sh  setup-apisix-gateway.sh
QSIGN-Integration-Tests/05-scripts/02-tests/: README.md  test-app3-qsign-integration.sh  test-full-qsign-flow.sh  test-pqc-hybrid-flow.sh  test-qsign-flow-updated.sh  test-qsign-flow.sh  test-qsign-integration.sh
QSIGN-Integration-Tests/05-scripts/03-cleanup/: cleanup-all-replicasets.sh  cleanup-replicasets.sh  list-old-replicasets.sh
docs/: ACCESS_INFO.md  FINAL_TEST_REPORT.md  LUNA_SPI_INSTALLATION.md  README.md
docs/Hybrid-Signature/: HYBRID_SIGNATURE_FINAL_REPORT.md  README.md  final-hybrid-summary.md
docs/PQC-Analysis/: PQC_VERIFICATION_FINAL_REPORT.md  README.md
docs/Q-KMS-Reports/: README.md  keycloak-qkms-test-report.sh
docs/Test-Scripts/: README.md  analyze-pqc-sso-token.sh  analyze-pqc-verification-location.sh  check-pqc-verification.sh  detailed-token-analysis.sh  final-hybrid-demo-v2.py  test-hybrid-token.sh
jsp/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
jsp/javadoc/com/safenetinc/luna/: LunaAPI.CKD.html  LunaAPI.CKDHP.html  LunaAPI.CKES.html  LunaAPI.CKMS.html  LunaAPI.html  LunaCKAttribute.html  LunaHAStatus.LunaMemberState.html  LunaHAStatus.html  LunaLogging.html  LunaSession.html  LunaSessionManager.html  LunaSlotManager.html  LunaTokenObject.html  LunaUtils.html  UserRole.html  package-frame.html  package-summary.html  package-tree.html
jsp/javadoc/com/safenetinc/luna/attributes/: LunaPkcs11Attributes.html  LunaPkcs11AttributesConfig.html  package-frame.html  package-summary.html  package-tree.html
jsp/javadoc/com/safenetinc/luna/exception/: LunaBIP32KeypairDerivationException.html  LunaCryptokiException.html  LunaException.html  LunaKeyLimitException.html  LunaMechanismInvalidException.html  LunaNotSupportedException.html  LunaObjectNotFoundException.html  LunaPartitionFullException.html  LunaPkcs11AttributesConfigException.html  package-frame.html  package-summary.html  package-tree.html
jsp/javadoc/com/safenetinc/luna/provider/: LunaCertificate.html  LunaCertificateX509.html  LunaKeyStore.html  LunaKeyStoreSIM.html  LunaProvider.html  LunaRandom.html  package-frame.html  package-summary.html  package-tree.html
jsp/javadoc/com/safenetinc/luna/provider/cipher/: LunaCipher.Padding.html  LunaCipher.html  LunaCipherAESCbc.html  LunaCipherAESCbcPad.html  LunaCipherAESCfb128.html  LunaCipherAESCfb8.html  LunaCipherAESCtr.html  LunaCipherAESEcb.html  LunaCipherAESGcm.html  (+46 more)
jsp/samples/: AlgParmGenDSADemo.java  AlgParmsDemo.java  Cipher3DesDemo.java  CipherAESDemo.java  CipherAESGCMDemo.java  CipherAESKwDemo.java  CipherAriaDemo.java  CipherCMSDemo.java  CipherDESDemo.java  CipherDESDemo2.java  CipherECIESDemo.java  CipherInterOpDemo.java  CipherPrivateWrapDemo.java  CipherRSADemo.java  CipherRsaOAEPDemo.java  CipherRsaencPADDemo.java  CipherSoftwareWrapDemo.java  CryptoUserLunaKeyStoreDemo.java  DigestSHADemo.java  DigestSM3Demo.java  HSM_Manager.java  JSSECiphers.java  JSSEClientDemo.java  JSSEServerDemo.java  KeyAgreementDHDemo.java  KeyAgreementECDHDemo.java  KeyAgreementECDHMontgomeryDemo.java  KeyAgreementHashDemo.java  KeyAgreementPRFKDFDemo.java  KeyFactoryDemo.java  KeyGeneratorDemo.java  KeyPairGeneratorBIP32Demo.java  KeyStoreCachingLunaDemo.java  KeyStoreLunaDemo.java  KeyStorePKADemo.java  LunaMLKEMDemo.java  LunaPkcs11AttributesConfigDemo.java  LunaPkcs11AttributesDemo.java  MacCmacDemo.java  MacGmacAesDemo.java  (+32 more)
scripts/: BUILD_LUNA_SPI.sh  complete-setup.sh  install-and-build-luna-spi.sh
(+308 files in other folders)
